# THC-FC-UNAM

./: .gitignore  Instalar_Ambiente.md  README.md  README.org  borrame.md  pyproject.toml
.github/workflows/: static.yml
Notas/: Iniciar_Jupyter.md
Notas/clases/: mis_clases.css  mod1_cl3_comandos_scripts.html  mod1_clase1.html  mod1_presentacion.html
Notas/clases/ejem_odisea/: nombres_odisea.txt
Practicas/: Practica_1.org
Practicas/Juan_P1/: Practica1.md
docs/: Iniciar_Jupyter.md  Instalar_Ambiente.md  index.html
docs/clases/: Ayudantia_3_Python.ipynb  mis_clases.css  mod2_intro_python.html  mod2_python_funciones_clases.ipynb  mod2_python_orientado_objetos.ipynb  mod2_python_regresion.sync.ipynb  mod2_python_regresion_sympy.ipynb  mod2_python_tipos_datos_funciones.ipynb
docs/clases/Ayudantias/12 Marzo 2026/: Ayudantia_12Marzo_Python.ipynb
docs/clases/Ayudantias/16 Abril 2026/: Ayudantía_16Abril_Python.ipynb
docs/clases/Ayudantias/19 Marzo 2026/: Ayudantia_19Marzo_Python.ipynb
docs/clases/Ayudantias/29 Abril 2026/: Ayudantia_23Abril.ipynb
docs/clases/ejem_odisea/: conteo_nombres.txt
docs/clases/mod3_latex/: ejemplo_articulo.tex  mod3_latex_introduccion.html  plantilla_articulo.tex
