[tool.poetry]
name = "thc_fciencias"
version = "0.1.0"
description = "Ambiente de desarrollo para el Taller de Herramientas Computacionales"
authors = ["Juan Escamilla Molgora <j.escamilla.molgora@ciencias.unam.mx>", "Antonio Guerrero López <jesus-antonio-guerrero@ciencias.unam.mx>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11.2"
jupyterlab = "^4.0"
matplotlib = "^3.10.8"
pandas = "^3.0.1"
pillow = ">=9.0.0"
sympy = "^1.14.0"
scikit-learn = "^1.8.0"
jupyterlab-rise = "^0.43.1"
simpy = "^4.1.1"
jupyter-ascending = "^0.1.27"
jupyter = "^1.1.1"
notebook = "6.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "basedpyright (>=1.39.3,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.11,<0.16.0)"
]
